<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".specialcall"
    android:orientation="vertical"
    android:background="#34123C">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="Suspicious0dp" >

        <LinearLayout
            android:gravity="center"
            android:background="@drawable/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensei_no_kuruma"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:gravity="center"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="475dp"
        android:layout_marginTop="80dp"
        android:layout_weight="4"
        android:orientation="horizontal">

        <LinearLayout
            android:background="#FFF"
            android:layout_width="0dp"
            android:layout_height="419dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/emergency_number"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="59dp"
                android:text="@string/plusline"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/aam"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/touch_n_go"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/angkatan_pertahanan_awam_24_jam"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/ops_banta"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:background="#FFF"
            android:layout_width="0dp"
            android:layout_height="419dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="106dp"
                android:text="@string/_1800_88_0000"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/_1800_88_0808"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/_03_2714_8888"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/_03_2687_1300"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/_03_8976_543"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>















</LinearLayout>