<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Userdata"
    android:orientation="vertical"
    android:background="#34123C">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="Suspicious0dp" >

        <LinearLayout
            android:gravity="center"
            android:background="@drawable/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensei_no_kuruma"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:gravity="center"/>

        </LinearLayout>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="#FFF"
        android:orientation="vertical"
        android:padding="7dp"
        tools:ignore="NestedWeights">

        <TextView
            android:layout_width="126dp"
            android:layout_height="36dp"
            android:text="@string/detail_of_report"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/last_diagnostic" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/number_of_service" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/status_of_car" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/life_of_car" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/current_problem" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/action_taken" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Next_Appointment" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="150dp">


        <Button
            android:id="@+id/btncancle"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="#800000"
            android:padding="16dp"
            android:text="@string/cancel"
            android:textColor="#FFF"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:background="#fbbe21"
            android:textColor="#FFF"
            android:layout_marginTop="40dp"
            android:id="@+id/btnsave"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="save"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
    </LinearLayout>





</LinearLayout>