<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reportpage"
    android:orientation="vertical"
    android:background="#22011B">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="Suspicious0dp" >
        <LinearLayout
            android:gravity="center"
            android:background="@drawable/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensei_no_kuruma"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:gravity="center"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:textColor="#FFF"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_car_id_plat_number"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="128dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="314dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#FFF"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/car_id"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="177dp" />

    <Button
        android:id="@+id/btntakepic"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="#FBBE21"
        android:text="@string/take_your_car_picture" />

    <ImageView
        android:src="@drawable/ic_image_black_24dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/btnimage"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <Button
        android:id="@+id/btnnext"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="#FBBE21"
        android:text="@string/next" />



</LinearLayout>