<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contactmac"
    android:orientation="vertical"
    android:background="#22011B">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        tools:ignore="Suspicious0dp" >
        <LinearLayout
            android:gravity="center"
            android:background="@drawable/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensei_no_kuruma"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:gravity="center"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="421dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btncm"
                android:background="#FBBE21"
                android:layout_marginTop="100dp"
                android:layout_width="200dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:text="@string/contact_machanic"
                android:textSize="18sp" />
            <Button
                android:id="@+id/btnss"
                android:background="#FBBE21"
                android:layout_marginTop="50dp"
                android:layout_width="200dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:text="@string/special_squard"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>